@@ -1,5 +1,10 @@
 2006-02-23  Tim Waugh  <twaugh@redhat.com>
 
+	* cupsmodule.c (cups_getUser): Implemented.
+	(cups_getServer): Implemented.
+	(cups_getPort): Implemented.
+	(cups_getEncryption): Implemented.
+
 	* cupsppd.h (PPD): Moved this here from..
 	* cupsppd.c: ..here.
 	(PPD_writeFd): No longer static.
